--- a/cmip5_intake/template.yaml
+++ b/cmip5_intake/template.yaml
@@ -5,7 +5,7 @@ plugins:
 sources:
   {% for variable in variables%}
   {{ variable }}_{{ model }}_{{ experiment }}_{{ ensemble_member}}:
-    description: {{ description }}
+    description: Monthly - {{ variable }} data from the CMIP5
     driver: {{ driver }}
     args: 
       urlpath: "{{ root_path }}/{{ activity }}/{{ institution }}/{{ model }}/{{ experiment }}/{{ frequency }}/{{ modeling_realm }}/{{ mip_table }}/{{ ensemble_member }}/latest/{{ variable }}/{{ variable }}_{{ mip_table }}_{{ model }}*.nc"
