rename the package and refactor old code

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:cmip5_intake/__init__.py]
+[bumpversion:file:intake_cmip5/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
@@ -32,7 +32,7 @@ collect_ignore = ['setup.py']
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = cmip5_intake/_version.py
-versionfile_build = cmip5_intake/_version.py
+versionfile_source = intake_cmip5/_version.py
+versionfile_build = intake_cmip5/_version.py
 tag_prefix =
-parentdir_prefix = cmip5_intake-
+parentdir_prefix = intake_cmip5-
