--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,11 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+exclude = docs,versioneer.py,intake_cmip5/._version.py
+ignore = E203, E266, E501, W503, F401, E722
+max-line-length = 88
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
 
 [aliases]
 # Define setup.py command aliases here
