--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       
     steps:
     
-      - run: apk add --no-cache build-base ca-certificates git openssh
+      - run: apk add --no-cache build-base ca-certificates git openssh bash
       
       # Get our data and merge with upstream
       - checkout
