--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 
       - run:
            name: Coverage
-           command: bash <(curl -s https://codecov.io/bash)
+           command: curl -s https://codecov.io/bash > .codecov && chmod +x .codecov && ./.codecov
            when: on_success
            
      
