--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 
       - run:
            name: Coverage
-           command: source activate intake-cmip5-dev && curl -s https://codecov.io/bash > .codecov && chmod +x .codecov && ./.codecov
+           command: source activate intake-cmip5-dev && codecov
            when: on_success
            
      
