Add support for notebooks in sphinx docs

--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -17,9 +17,12 @@ dependencies:
   - coverage
   - pytest-cov
   - codecov
-  - sphinx
+  - sphinx>=1.6
   - sphinx_rtd_theme
   - recommonmark 
   - numpydoc
+  - nbsphinx
+  - pandoc
+  - ipykernel
   - pip:
     - sphinx_copybutton
