--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 
 jobs:
 
@@ -43,13 +43,7 @@ jobs:
 
 # Tell CircleCI to use this workflow
 workflows:
-  version: 2
   default:
     jobs:
-      - build_test:
-          filters:
-            branches:
-              only:
-                - devel
-                - master
+      - build_test
  
