Cleanup old references

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 [run]
 omit = 
     tests/*.py
-    intake_cmip5/_version.py
-    intake_cmip5/__init__.py
+    intake_cmip/_version.py
+    intake_cmip/__init__.py
     versioneer.py
     setup.py
