--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,8 @@
-[bumpversion]
-current_version = 
-commit = True
-tag = True
-
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
-[bumpversion:file:intake_cmip5/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
-
 [bdist_wheel]
 universal = 1
 
 [flake8]
-exclude = docs,versioneer.py,intake_cmip5/._version.py
+exclude = docs,versioneer.py,intake_cmip/._version.py
 ignore = E203, E266, E501, W503, F401, E722
 max-line-length = 88
 max-complexity = 18
@@ -36,7 +23,7 @@ collect_ignore = ['setup.py']
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = intake_cmip5/_version.py
-versionfile_build = intake_cmip5/_version.py
+versionfile_source = intake_cmip/_version.py
+versionfile_build = intake_cmip/_version.py
 tag_prefix =
-parentdir_prefix = intake_cmip5-
+parentdir_prefix = intake_cmip-
