--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,74 @@
 version: 2
-
-jobs:
-
-  # Define a "build_test" job to be run with Circle
-  build_test:
-  
-    # This is the base environment that Circle will use
-    docker:
-      - image: frolvlad/alpine-miniconda3
-      
-    steps:
-    
-      - run: apk add --no-cache build-base ca-certificates git openssh bash curl
-      
-      # Get our data and merge with upstream
-      - checkout
-      
-      # Restore cached files to speed things up
-      - restore_cache:
-          keys:
-            - conda-pkgs
-            
-      - run: ./ci/install-circleci.sh
-      
-      # Cache some files for a speedup in subsequent builds
-      - save_cache:
-          key: conda-pkgs
-          paths:
-            - /opt/conda/pkgs
-            
-      # Run tests
-      - run:
-           name: Running Tests 
-           command: source activate intake-cmip-dev && py.test --junitxml=test-reports/junit.xml --cov=./
-
-      - run:
-           name: Coverage
-           command: source activate intake-cmip-dev && codecov
-           when: on_success
-           
-     
-
 # Tell CircleCI to use this workflow
 workflows:
   version: 2
   default:
     jobs:
-      - build_test
+      - "python-3.6"
+
+jobs:
+  
+  "python-3.6":
+    # This is the base environment that Circle will use
+    docker:
+      - image: continuumio/miniconda:latest
+    environment:
+      PYTHON: "3.6"
+      ENV_NAME: "intake-cmip-dev"
+
+    steps:
+      # Get our data and merge with upstream
+      - checkout
+  
+      # Restore cached files to speed things up
+      - restore_cache:
+          key: deps-{{ .Branch }}-3.6-{{ checksum "environment-dev.yml" }}
+            
+      - run: # install and activate conda environment
+          name: configure conda 
+          command: ./ci/install-circle.sh
+      
+      - run:
+          command: |
+            source activate ${ENV_NAME}
+            pytest --junitxml=test-reports/junit.xml --cov=./
+
+      - run:
+          name: Code Coverage + Code Styling with (black, flake8, isort)
+          command: |
+            source activate ${ENV_NAME}
+            echo "[Upload coverage]"
+            codecov
+            echo "[flake8]"
+            flake8 
+            echo "[black]"
+            black --check . 
+            echo "[isort]"
+            isort --recursive --check-only .
+      - run:
+          name: Check documentation build 
+          command: |
+            source activate ${ENV_NAME}
+            pushd docs
+            make html
+            popd
+     
+      # Cache some files for a speedup in subsequent builds
+      - save_cache:
+          key: deps-{{ .Branch }}-3.6-{{ checksum "environment-dev.yml" }}
+          paths:
+            - "/opt/conda/envs/${ENV_NAME}/"
+            - "/opt/conda/pkgs"
+
+      - store_test_results:
+          path: test-reports
+
+      - store_artifacts:
+          path: test-reports
+      # Tell Circle to store the documentation output in a folder that we can access later
+      - store_artifacts: 
+          path: docs/_build/html
+          destination: html
+           
+     
  
