Auto styling with pre-commit hooks, black, flake8, and isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,20 @@ max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
 
+[isort]
+known_first_party=esmlab
+known_third_party=dask,intake_xarray,numpy,pandas,pytest,setuptools,xarray
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+combine_as_imports=True
+line_length=88
+skip=
+    docs/source/conf.py
+    setup.py
+    versioneer.py
+    intake_cmip/_version.py
+
 [aliases]
 # Define setup.py command aliases here
 test = pytest
