--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 universal = 1
 
 [flake8]
-exclude = docs,versioneer.py,intake_cmip/._version.py
-ignore = E203, E266, E501, W503, F401, E722
+exclude = docs/source,versioneer.py,intake_cmip/._version.py
+ignore = E203, E266, E501, W503, F401, E722, E402
 max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
