--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ workflows:
   default:
     jobs:
       - "python-3.6"
+      - "deploy-conda":
+          requires:
+            - "python-3.6"
+
 
 jobs:
   
@@ -70,5 +74,17 @@ jobs:
           path: docs/_build/html
           destination: html
            
-     
- 
+
+  "deploy-conda":
+    docker:
+      - image: continuumio/miniconda:latest
+
+    steps:
+      # Get our data and merge with upstream
+      - checkout
+
+      - run:
+          name: Deploy package release to Anaconda.org
+          command: |
+            conda install conda-build anaconda-client --yes --quiet
+            ./ci/upload-anaconda.sh
