Add filters for deployment job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ workflows:
       - "deploy-conda":
           requires:
             - "python-3.6"
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
 
 
 jobs:
