--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 intake
-git+git://github.com/ContinuumIO/intake-xarray@master#egg=intake-xarray
+git+git://github.com/ContinuumIO/intake-xarray.git@master#egg=intake-xarray
